added : implement payment mode for recharge and forfait and others update

--- a/app/src/main/res/layout/buy_recharge_dialog.xml
+++ b/app/src/main/res/layout/buy_recharge_dialog.xml
@@ -20,95 +20,192 @@
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.8"
+        app:layout_constraintHeight_percent="0.9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintWidth_percent="0.9">
 
-        <LinearLayout
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/body"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:background="@color/background"
+            android:overScrollMode="never"
+            android:scrollbars="none"
+            android:visibility="visible">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat_extrabold"
-                android:text="@string/buy_recharge_title"
-                android:textColor="@color/blue" />
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/montserrat_medium"
-                android:text="Lorem ipsum dolor sitidunt ut labore et d dptua. At vero eos et accusam et justo"
-                android:textColor="@color/grey2"
-                android:visibility="gone"
-                android:textSize="12sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_extrabold"
+                    android:text="@string/buy_recharge_title"
+                    android:textColor="@color/blue" />
 
-            <TextView
-                android:id="@+id/msisdn"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="30dp"
-                android:background="@drawable/textview_background"
-                android:fontFamily="@font/montserrat_bold"
-                android:gravity="center_vertical"
-                android:includeFontPadding="false"
-                android:paddingStart="20dp"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                tools:text="06 55 64 04 11" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="Lorem ipsum dolor sitidunt ut labore et d dptua. At vero eos et accusam et justo"
+                    android:textColor="@color/grey2"
+                    android:textSize="12sp"
+                    android:visibility="gone" />
 
-            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                android:id="@+id/rechargeDropDown"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/editext_border"
-                android:completionThreshold="0"
-                android:focusable="false"
-                android:fontFamily="@font/montserrat_bold"
-                android:overScrollMode="never"
-                android:paddingStart="20dp"
-                android:paddingEnd="10dp"
-                android:textAlignment="viewStart"
-                android:textColorHint="@color/black"
-                android:textSize="13sp"
-                app:drawableEndCompat="@drawable/ic_down"
-                tools:text="" />
+                <TextView
+                    android:id="@+id/msisdn"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/textview_background"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:gravity="center_vertical"
+                    android:includeFontPadding="false"
+                    android:paddingStart="20dp"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    tools:text="06 55 64 04 11" />
 
-            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                android:id="@+id/rechargeChildrenDropDown"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/editext_border"
-                android:completionThreshold="0"
-                android:focusable="false"
-                android:fontFamily="@font/montserrat_bold"
-                android:overScrollMode="never"
-                android:paddingStart="20dp"
-                android:paddingEnd="10dp"
-                android:textAlignment="viewStart"
-                android:textColorHint="@color/black"
-                android:textSize="13sp"
-                app:drawableEndCompat="@drawable/ic_down"
-                tools:text="" />
-        </LinearLayout>
+                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                    android:id="@+id/rechargeDropDown"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/editext_border"
+                    android:completionThreshold="0"
+                    android:focusable="false"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:overScrollMode="never"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="10dp"
+                    android:textAlignment="viewStart"
+                    android:textColorHint="@color/black"
+                    android:textSize="13sp"
+                    app:drawableEndCompat="@drawable/ic_down"
+                    tools:text="" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buyBtn"
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="@color/button_selector"
-            android:fontFamily="@font/montserrat_extrabold"
-            android:text="@string/buy_btn_label"
-            android:textColor="@color/white" />
+                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                    android:id="@+id/rechargeChildrenDropDown"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/editext_border"
+                    android:completionThreshold="0"
+                    android:focusable="false"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:overScrollMode="never"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="10dp"
+                    android:textAlignment="viewStart"
+                    android:textColorHint="@color/black"
+                    android:textSize="13sp"
+                    app:drawableEndCompat="@drawable/ic_down"
+                    tools:text="" />
+
+                <LinearLayout
+                    android:id="@+id/modePaymentLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="15dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/montserrat_bold"
+                        android:includeFontPadding="false"
+                        android:text="@string/mode_payment_label"
+                        android:textColor="@color/blue"
+                        android:textSize="15sp" />
+
+                    <RadioGroup
+                        android:id="@+id/radioGroup"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:paddingLeft="20dp"
+                        android:paddingTop="10dp"
+                        android:paddingRight="20dp">
+
+                        <RadioButton
+                            android:id="@+id/radio0"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/radio_on"
+                            android:buttonTint="@color/radio_tint"
+                            android:drawableLeft="@drawable/carte_bancaire"
+                            android:drawablePadding="10dp"
+                            android:fontFamily="@font/montserrat_medium"
+                            android:layoutDirection="rtl"
+                            android:padding="15dp"
+                            android:paddingLeft="10dp"
+                            android:text="@string/card_bank_label"
+                            android:textSize="16sp"
+                            android:visibility="gone"
+                            app:cornerRadius="5dp" />
+
+                        <RadioButton
+                            android:id="@+id/radio1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/radio_off"
+                            android:buttonTint="@color/radio_tint"
+                            android:drawableLeft="@drawable/ic_payment_mobile"
+                            android:drawablePadding="10dp"
+                            android:fontFamily="@font/montserrat_medium"
+                            android:layoutDirection="rtl"
+                            android:padding="15dp"
+                            android:paddingLeft="10dp"
+                            android:text="@string/app_mobile_label"
+                            android:textSize="16sp"
+                            android:visibility="gone"
+                            app:cornerRadius="5dp" />
+
+                        <RadioButton
+                            android:id="@+id/radio2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/radio_off"
+                            android:buttonTint="@color/radio_tint"
+                            android:drawableLeft="@drawable/ic_mtcash"
+                            android:drawablePadding="10dp"
+                            android:fontFamily="@font/montserrat_medium"
+                            android:layoutDirection="rtl"
+                            android:padding="15dp"
+                            android:paddingLeft="10dp"
+                            android:text="@string/mtcash_label"
+                            android:textSize="16sp"
+                            android:visibility="gone"
+                            app:cornerRadius="5dp" />
+                    </RadioGroup>
+
+                </LinearLayout>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/buyBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="65dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="10dp"
+                    android:backgroundTint="@color/button_selector"
+                    android:fontFamily="@font/montserrat_extrabold"
+                    android:text="@string/buy_btn_label"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
