--- a/app/src/main/res/layout/fragment_bundles.xml
+++ b/app/src/main/res/layout/fragment_bundles.xml
@@ -10,8 +10,8 @@
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:overScrollMode="never"
             android:fillViewport="true"
+            android:overScrollMode="never"
             android:scrollbars="vertical">
 
             <LinearLayout
@@ -320,6 +320,101 @@
                         app:tsb_track_progress_size="7dp"
                         app:tsb_track_rounded_corners="true" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <RelativeLayout
+                    android:id="@+id/layoutModePayment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="20dp"
+                    android:background="@drawable/white_background"
+                    android:orientation="horizontal"
+                    android:padding="20dp"
+                    android:visibility="gone">
+
+                    <LinearLayout
+                        android:id="@+id/modePaymentLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/montserrat_bold"
+                            android:includeFontPadding="false"
+                            android:text="@string/mode_payment_label"
+                            android:textColor="@color/black"
+                            android:textSize="15sp" />
+
+                        <RadioGroup
+                            android:id="@+id/radioGroup"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:padding="20dp">
+
+                            <RadioButton
+                                android:id="@+id/radio0"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginBottom="10dp"
+                                android:background="@drawable/radio_on"
+                                android:buttonTint="@color/radio_tint"
+                                android:drawableLeft="@drawable/carte_bancaire"
+                                android:drawablePadding="10dp"
+                                android:fontFamily="@font/montserrat_medium"
+                                android:layoutDirection="rtl"
+                                android:padding="15dp"
+                                android:paddingLeft="10dp"
+                                android:text="@string/card_bank_label"
+                                android:textSize="16sp"
+                                android:visibility="gone"
+                                app:cornerRadius="5dp" />
+
+                            <RadioButton
+                                android:id="@+id/radio1"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginBottom="10dp"
+                                android:background="@drawable/radio_off"
+                                android:buttonTint="@color/radio_tint"
+                                android:drawableLeft="@drawable/ic_payment_mobile"
+                                android:drawablePadding="10dp"
+                                android:fontFamily="@font/montserrat_medium"
+                                android:layoutDirection="rtl"
+                                android:padding="15dp"
+                                android:paddingLeft="10dp"
+                                android:text="@string/app_mobile_label"
+                                android:textSize="16sp"
+                                android:visibility="gone"
+                                app:cornerRadius="5dp" />
+
+                            <RadioButton
+                                android:id="@+id/radio2"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginBottom="10dp"
+                                android:background="@drawable/radio_off"
+                                android:buttonTint="@color/radio_tint"
+                                android:drawableLeft="@drawable/ic_mtcash"
+                                android:drawablePadding="10dp"
+                                android:fontFamily="@font/montserrat_medium"
+                                android:layoutDirection="rtl"
+                                android:padding="15dp"
+                                android:paddingLeft="10dp"
+                                android:text="@string/mtcash_label"
+                                android:textSize="16sp"
+                                android:visibility="gone"
+                                app:cornerRadius="5dp" />
+                        </RadioGroup>
+
+                    </LinearLayout>
+
+                </RelativeLayout>
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/changeBundleBtn"
