--- a/app/src/main/res/layout/fragment_login_new.xml
+++ b/app/src/main/res/layout/fragment_login_new.xml
@@ -131,7 +131,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
                         android:src="@drawable/show_password_selector"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         app:tint="#204CCB" />
                 </RelativeLayout>
             </LinearLayout>
@@ -166,27 +166,27 @@
                     android:layout_height="40dp"
                     android:layout_centerVertical="true"
                     android:src="@drawable/print_selector"
-                    android:visibility="invisible" />
+                    android:visibility="gone" />
 
                 <ImageView
+                    android:id="@+id/face"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:id="@+id/face"
-                    android:visibility="invisible"
+                    android:layout_centerVertical="true"
                     android:layout_marginStart="30dp"
                     android:layout_toEndOf="@+id/empreinte"
                     android:src="@drawable/face_selector"
-                    android:layout_centerVertical="true"/>
+                    android:visibility="gone" />
 
                 <ImageView
+                    android:id="@+id/eye"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:id="@+id/eye"
-                    android:visibility="invisible"
+                    android:layout_centerVertical="true"
                     android:layout_marginStart="30dp"
-                    android:src="@drawable/eye_selector"
                     android:layout_toEndOf="@+id/face"
-                    android:layout_centerVertical="true"/>
+                    android:src="@drawable/eye_selector"
+                    android:visibility="gone" />
 
 
             </RelativeLayout>
