--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -372,6 +372,7 @@
                         android:layout_weight="0.3"
                         android:fontFamily="@font/nunito_semibold"
                         android:gravity="center"
+                        android:visibility="gone"
                         android:text="@string/anglais_label"
                         android:textColor="@color/blue"
                         android:textSize="12sp" />
