--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -146,6 +146,7 @@
                             CircleProgressView:cpv_textColor="@color/white"
                             CircleProgressView:cpv_textScale="0"
                             CircleProgressView:cpv_unit="%"
+                            android:animateLayoutChanges="true"
                             CircleProgressView:cpv_unitPosition="right_top"
                             CircleProgressView:cpv_unitScale="1"
                             CircleProgressView:cpv_value="24" />
