--- a/app/src/main/res/layout/activate_sim_dialog.xml
+++ b/app/src/main/res/layout/activate_sim_dialog.xml
@@ -4,13 +4,15 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CCFFFFFF">
+    android:background="#AA000000">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingBottom="10dp"
+        android:background="@color/white"
+        android:padding="20dp"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
