--- a/app/src/main/res/layout/fragment_activate_sim.xml
+++ b/app/src/main/res/layout/fragment_activate_sim.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
@@ -48,6 +48,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginVertical="20dp"
@@ -56,10 +57,12 @@
                 android:orientation="vertical"
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="40dp"
+                android:layout_marginBottom="100dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/title">
 
                 <ImageView
+                    android:id="@+id/scanQR"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_gravity="center_horizontal"
@@ -69,12 +72,13 @@
                 <EditText
                     android:id="@+id/code"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="50dp"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="20dp"
                     android:background="@drawable/editext_border"
                     android:fontFamily="@font/avenir_book"
                     android:hint="@string/code"
                     android:paddingStart="30dp"
+                    android:paddingEnd="30dp"
                     android:textColorHint="@color/black"
                     android:textSize="12sp" />
 
@@ -82,7 +86,7 @@
                     android:id="@+id/validateBtn"
                     android:layout_width="match_parent"
                     android:layout_height="65dp"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginTop="20dp"
                     android:backgroundTint="@color/button_selector"
                     android:fontFamily="@font/montserrat_extrabold"
                     android:text="@string/validate_btn_label"
@@ -101,6 +105,35 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <RelativeLayout
+                android:id="@+id/cameraContainer"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_marginTop="70dp"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <androidx.camera.view.PreviewView
+                        android:id="@+id/previewView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </FrameLayout>
+
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:contentDescription="@string/qrcode" />
+            </RelativeLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </layout>
