--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -133,6 +133,7 @@
                             android:layout_height="100dp"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="10dp"
+                            android:animateLayoutChanges="true"
                             CircleProgressView:cpv_autoTextSize="false"
                             CircleProgressView:cpv_barColor="#3158CC"
                             CircleProgressView:cpv_barWidth="15dp"
@@ -141,12 +142,11 @@
                             CircleProgressView:cpv_outerContourSize="0dp"
                             CircleProgressView:cpv_rimColor="#CEE6FF"
                             CircleProgressView:cpv_rimWidth="15dp"
-                            CircleProgressView:cpv_seekMode="false"
+                            CircleProgressView:cpv_seekMode="true"
                             CircleProgressView:cpv_showUnit="false"
                             CircleProgressView:cpv_textColor="@color/white"
                             CircleProgressView:cpv_textScale="0"
                             CircleProgressView:cpv_unit="%"
-                            android:animateLayoutChanges="true"
                             CircleProgressView:cpv_unitPosition="right_top"
                             CircleProgressView:cpv_unitScale="1"
                             CircleProgressView:cpv_value="24" />
@@ -200,7 +200,7 @@
                             CircleProgressView:cpv_outerContourSize="0dp"
                             CircleProgressView:cpv_rimColor="#FAD5BF"
                             CircleProgressView:cpv_rimWidth="15dp"
-                            CircleProgressView:cpv_seekMode="false"
+                            CircleProgressView:cpv_seekMode="true"
                             CircleProgressView:cpv_showUnit="false"
                             CircleProgressView:cpv_textColor="@color/white"
                             CircleProgressView:cpv_textScale="0"
