--- a/app/src/main/res/layout/activity_contract.xml
+++ b/app/src/main/res/layout/activity_contract.xml
@@ -232,7 +232,7 @@
                             CircleProgressView:cpv_outerContourSize="0dp"
                             CircleProgressView:cpv_rimColor="#A8D2FF"
                             CircleProgressView:cpv_rimWidth="15dp"
-                            CircleProgressView:cpv_seekMode="true"
+                            CircleProgressView:cpv_seekMode="false"
                             CircleProgressView:cpv_showUnit="false"
                             CircleProgressView:cpv_textColor="@color/white"
                             CircleProgressView:cpv_textScale="0"
@@ -290,7 +290,7 @@
                             CircleProgressView:cpv_outerContourSize="0dp"
                             CircleProgressView:cpv_rimColor="#F4D2BD"
                             CircleProgressView:cpv_rimWidth="15dp"
-                            CircleProgressView:cpv_seekMode="true"
+                            CircleProgressView:cpv_seekMode="false"
                             CircleProgressView:cpv_showUnit="false"
                             CircleProgressView:cpv_textColor="@color/white"
                             CircleProgressView:cpv_textScale="0"
