--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -142,7 +142,7 @@
                             CircleProgressView:cpv_outerContourSize="0dp"
                             CircleProgressView:cpv_rimColor="#CEE6FF"
                             CircleProgressView:cpv_rimWidth="15dp"
-                            CircleProgressView:cpv_seekMode="true"
+                            CircleProgressView:cpv_seekMode="false"
                             CircleProgressView:cpv_showUnit="false"
                             CircleProgressView:cpv_textColor="@color/white"
                             CircleProgressView:cpv_textScale="0"
@@ -200,7 +200,7 @@
                             CircleProgressView:cpv_outerContourSize="0dp"
                             CircleProgressView:cpv_rimColor="#FAD5BF"
                             CircleProgressView:cpv_rimWidth="15dp"
-                            CircleProgressView:cpv_seekMode="true"
+                            CircleProgressView:cpv_seekMode="false"
                             CircleProgressView:cpv_showUnit="false"
                             CircleProgressView:cpv_textColor="@color/white"
                             CircleProgressView:cpv_textScale="0"
