--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -54,6 +54,7 @@
                         android:layout_width="20dp"
                         android:layout_height="25dp"
                         android:layout_marginEnd="10dp"
+                        android:visibility="gone"
                         android:src="@drawable/panie" />
 
                     <ImageView
@@ -61,6 +62,7 @@
                         android:layout_width="20dp"
                         android:layout_height="25dp"
                         android:layout_marginEnd="10dp"
+                        android:visibility="gone"
                         android:src="@drawable/ic_notif" />
 
                     <ImageView
