--- a/app/src/main/res/layout/activity_personal_information.xml
+++ b/app/src/main/res/layout/activity_personal_information.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
@@ -258,7 +259,8 @@
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/black"
                                 android:textColorHint="@color/lightGrey"
-                                android:textSize="12sp" />
+                                android:textSize="12sp"
+                                tools:ignore="RtlCompat" />
 
                             <ImageView
                                 android:id="@+id/updatePasswordBtn"
