--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -7,6 +7,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/loader"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:scaleType="fitXY"
+            android:src="@mipmap/loader"
+            android:visibility="visible" />
+
         <androidx.core.widget.NestedScrollView
             android:id="@+id/body"
             android:layout_width="match_parent"
@@ -94,17 +104,6 @@
                         app:cornerRadius="5dp" />
 
                 </RelativeLayout>
-
-                <pl.droidsonroids.gif.GifImageView
-                    android:id="@+id/loader"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_centerInParent="true"
-                    android:layout_gravity="center"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/loader"
-                    android:visibility="gone" />
-
                 <RelativeLayout
                     android:id="@+id/layoutModePayment"
                     android:layout_width="match_parent"
@@ -112,8 +111,8 @@
                     android:layout_marginVertical="20dp"
                     android:background="@drawable/white_background"
                     android:orientation="horizontal"
-                    android:visibility="gone"
-                    android:padding="20dp">
+                    android:padding="20dp"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:id="@+id/modePaymentLayout"
@@ -139,60 +138,60 @@
                             android:padding="20dp">
 
                             <RadioButton
-                                android:background="@drawable/radio_on"
                                 android:id="@+id/radio0"
-                                android:visibility="gone"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginBottom="10dp"
+                                android:background="@drawable/radio_on"
                                 android:buttonTint="@color/radio_tint"
                                 android:drawableLeft="@drawable/carte_bancaire"
                                 android:drawablePadding="10dp"
+                                android:fontFamily="@font/montserrat_medium"
                                 android:layoutDirection="rtl"
+                                android:padding="15dp"
                                 android:paddingLeft="10dp"
                                 android:text="@string/card_bank_label"
                                 android:textSize="16sp"
-                                android:fontFamily="@font/montserrat_medium"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginBottom="10dp"
-                                android:padding="15dp"
+                                android:visibility="gone"
                                 app:cornerRadius="5dp" />
 
                             <RadioButton
                                 android:id="@+id/radio1"
-                                android:background="@drawable/radio_off"
-                                android:visibility="gone"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginBottom="10dp"
+                                android:background="@drawable/radio_off"
                                 android:buttonTint="@color/radio_tint"
                                 android:drawableLeft="@drawable/ic_payment_mobile"
                                 android:drawablePadding="10dp"
+                                android:fontFamily="@font/montserrat_medium"
                                 android:layoutDirection="rtl"
+                                android:padding="15dp"
                                 android:paddingLeft="10dp"
                                 android:text="@string/app_mobile_label"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginBottom="10dp"
                                 android:textSize="16sp"
-                                android:padding="15dp"
-                                android:fontFamily="@font/montserrat_medium"
+                                android:visibility="gone"
                                 app:cornerRadius="5dp" />
 
                             <RadioButton
                                 android:id="@+id/radio2"
-                                android:visibility="gone"
-                                android:background="@drawable/radio_off"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:drawablePadding="10dp"
-                                android:buttonTint="@color/radio_tint"
-                                android:drawableLeft="@drawable/ic_mtcash"
-                                android:layoutDirection="rtl"
-                                android:paddingLeft="10dp"
-                                android:text="@string/mtcash_label"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginBottom="10dp"
-                                android:textSize="16sp"
-                                android:padding="15dp"
+                                android:background="@drawable/radio_off"
+                                android:buttonTint="@color/radio_tint"
+                                android:drawableLeft="@drawable/ic_mtcash"
+                                android:drawablePadding="10dp"
                                 android:fontFamily="@font/montserrat_medium"
+                                android:layoutDirection="rtl"
+                                android:padding="15dp"
+                                android:paddingLeft="10dp"
+                                android:text="@string/mtcash_label"
+                                android:textSize="16sp"
+                                android:visibility="gone"
                                 app:cornerRadius="5dp" />
                         </RadioGroup>
 
